fixed some header links overflowing from header, removed commas when hovering on memes

--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -8,7 +8,7 @@ header {
 }
 
 header .navigate span>* {
-    padding-block: calc((var(--header-height) - var(--font-size) - 1px) / 2)
+    padding-block: calc((var(--header-height) - var(--font-size) - 2px) / 2)
 }
 
 header .navigate>*:not(:last-child) {
